# nlp_course

./: .gitignore  README.md  pyproject.toml
week01_embeddings/: homework.ipynb  seminar.ipynb
week02_classification/: homework_part1.ipynb  seminar.ipynb
